# nixcheck

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
nixcheck/: __init__.py  cli.py  collectors.py  graph.py  miners.yaml  models.py  reporter.py  rich_reporter.py
tests/: test_basic.py  test_functional.py
